--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,34 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Exercicio4",
+            "request": "launch",
+            "mainClass": "Exercicio4",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio3",
+            "request": "launch",
+            "mainClass": "Exercicio3",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio2",
+            "request": "launch",
+            "mainClass": "Exercicio2",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio1",
+            "request": "launch",
+            "mainClass": "Exercicio1",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
             "name": "index",
             "request": "launch",
             "mainClass": "index",
