--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,41 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Exercicio3",
+            "request": "launch",
+            "mainClass": "ListaEx3.Exercicio3",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio2",
+            "request": "launch",
+            "mainClass": "ListaEx3.Exercicio2",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio11",
+            "request": "launch",
+            "mainClass": "ListaEx3.Exercicio11",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio1",
+            "request": "launch",
+            "mainClass": "ListaEx3.Exercicio1",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "Exercicio1",
+            "request": "launch",
+            "mainClass": "ListaEx2.Exercicio1",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
             "name": "Exercicio9",
             "request": "launch",
             "mainClass": "Exercicio9",
