--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Exercicio4",
+            "request": "launch",
+            "mainClass": "ListaEx3.Exercicio4",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
+            "name": "controlaProduto",
+            "request": "launch",
+            "mainClass": "controle.controlaProduto",
+            "projectName": "3POB_66f6b5f8"
+        },
+        {
+            "type": "java",
             "name": "Exercicio3",
             "request": "launch",
             "mainClass": "ListaEx3.Exercicio3",
