--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Exercicio5L3",
+            "request": "launch",
+            "mainClass": "lista3.Exercicio5L3",
+            "projectName": "3POB_d052120b"
+        },
+        {
+            "type": "java",
             "name": "Exercicio3L1",
             "request": "launch",
             "mainClass": "lista1.Exercicio3L1",
